Preparing for Thunderbird 3b2...

--- a/he/mail/chrome/messenger/activity.properties
+++ b/he/mail/chrome/messenger/activity.properties
@@ -1,12 +1,4 @@
-### # LOCALIZATION NOTE (seconds, minutes, hours, days): Semi-colon list of plural
-### # forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-###seconds=שניה;שניות
-###minutes=דקה;דקות
-###hours=שעה;שעות
-###days=יום;ימים
-
 # Status Text
-###paused=מושהה.
 paused2=מושהה
 processing=מעבד
 notStarted=לא התחיל
@@ -15,10 +7,53 @@ waitingForInput=ממתין לקלט
 waitingForRetry=ממתין לנסיון חוזר
 completed=הושלם
 canceled=בוטל
-###cannotPause=פעילות זו לא יכולה להיות מושהת
-###autoRetry=מנסה שוב בעוד %S שניות
 
 # LOCALIZATION NOTE (yesterday): Displayed time for files finished yesterday
 yesterday=אתמול
 # LOCALIZATION NOTE (monthDate): #1 month name; #2 date number; e.g., January 22
 monthDate=#2 ב#1
+
+# Send Message
+sendingMessage=שליחת הודעה
+# LOCALIZATION NOTE (sendingMessageTo): %S will be replaced by the first name or newsgroup that the message is being sent to.
+sendingMessageTo=שליחת הודעה אל %S
+sentMessage=הודעה נשלחה
+# LOCALIZATION NOTE (sentMessageTo): %S will be replaced by the first name or newsgroup that the message was sent to.
+sentMessageTo=הודעה נשלחה אל %S
+failedToSendMessage=כשלון בשליחת הודעה
+# LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
+failedToSendMessageTo=כשלון בשליחת הודעה אל %S
+
+# LOCALIZATION NOTE (autosyncProcessProgress): Do not translate the word "%1$S", "%2$S" and "%3$S" below.
+# Place the word %1$S in your translation where the number of the message being downloaded should appear.
+# Place the word %2$S in your translation where the total number of pending messages should appear.
+# Place the word %3$S in your translation where the name of the folder being processed should appear.
+autosyncProcessProgress=מוריד הודעה %1$S מתוך %2$S בתיקייה %3$S
+# LOCALIZATION NOTE (autosyncProcessDisplayText): %S will be replaced by the folder name
+autosyncProcessDisplayText=מעדכן תיקייה %S
+# LOCALIZATION NOTE (autosyncEventDisplayText): %S will be replaced by the account name
+autosyncEventDisplayText=תיקייה %S עדכנית
+# LOCALIZATION NOTE (autosyncEventStatusText): %S will be replaced by total number of downloaded messages
+autosyncEventStatusText=סך כל ההודעות שהורדו: %S
+autosyncEventStatusTextNoMsgs=אין הודעות להורדה
+# LOCALIZATION NOTE (autosyncContextDisplayText): %S will be replaced by the account name
+autosyncContextDisplayText=מסנכרן: %S
+
+# Message actions that show up in activity manager
+# LOCALIZATION NOTE (deletedMessages): #1 number of messages
+deletedMessages=הודעה אחת נמחקה;נמחקו #1 הודעות
+# LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
+movedMessages=הועברה הודעה אחת מתיקייה #2 אל #3;הועברו #1 הודעות מתיקייה #2 לתיקייה #3
+# LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
+copiedMessages=הועתקה הודעה אחת מתיקייה #2 אל #3;הועתקו #1 הודעות מתיקייה #2 לתיקייה #3
+# LOCALIZATION NOTE (fromServerToServer): #1 source server, #2 destination server
+fromServerToServer=מ־#1 אל #2
+# LOCALIZATION NOTE (deletedFolder): #1 folder name
+deletedFolder=תיקייה #1 נמחקה
+# LOCALIZATION NOTE (movedFolder): #1 and #2 are folder names
+movedFolder=תיקייה #1 הועברה לתיקייה #2
+# LOCALIZATION NOTE (copiedFolder): #1 and #2 are folder names
+copiedFolder=תיקייה #1 הועתקה לתיקייה #2
+# LOCALIZATION NOTE (renamedFolder): #1 and #2 are folder names
+renamedFolder=תיקייה #1 שונתה לשם #2
+
