--- a/he/mail/chrome/messenger/messenger.properties
+++ b/he/mail/chrome/messenger/messenger.properties
@@ -229,14 +229,29 @@ attachmentDisplayNameFormat = %S %S
 102 = התחברות לשרת %S נכשלה.
 103 = לא ניתן להתחבר לשרת %S; החיבור נדחה.
 104 = תם הזמן המוקצב להתחברות לשרת %S.
+
 recipientSearchCriteria = נושא או נמען מכילים:
 fromSearchCriteria=נושא או מאת מכילים:
 
-
+# LOCALIZATION NOTE(biffNotification): %1$S is the number of new messages  
 biffNotification_message = יש %1$S הודעה חדשה
 biffNotification_messages = יש %1$S הודעות חדשות
+
+# LOCALIZATION NOTE(biffNotification): %1$S is the name of the account %2$S is the number of new messages  
 newBiffNotification_message = הודעה חדשה ב־%1$S
 newBiffNotification_messages = %2$S הודעות חדשות ב־%1$S
+
+# LOCALIZATION NOTE(macBiffNotification is Mac only):
+#  %1$S is the number of new messages
+#  %2$S is a list of names and/or email addresses separated by biffNotification_separator
+#  %3$S is the number of new messages not displayed in the biff alert
+macBiffNotification_message=הודעה חדשה מאת %2$S.
+macBiffNotification_messages=%1$S הודעות חדשות מאת %2$S.
+macBiffNotification_messages_extra=%1$S הודעות חדשות מאת %2$S וגם %3$S נוספות.
+# Used to separate names/email addresses in a list.  Note the trailing space ', '
+macBiffNotification_separator=,\u0020
+
+# For the Quota tab in the mail folder properties dialog
 quotaUsedFree = %S מתוך %S ק״ב מנוצלים
 quotaPercentUsed = %S%% מלא
 # for quota in main window (commandglue.js)
@@ -322,4 +337,17 @@ messageCollapsed=מקופל
 headerFieldYou=אליך
 ### It was better to put here "you" but in order to make it more friendly to womans, I've decided to translate it to "To you".. Let's hope no one will use this field for the sent items. (Tomer)
 
+# The what's new tab title, shown on version update
 whatsNew=מה חדש
+
+#LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
+# glodaWhyColumn when performing a gloda-backed search, explaining why a
+# specific result is present in the search.  Because of how the message grouping
+# mechanism works, this value is both the value in the "Why" column as well as
+# the header for the group (when sorting/grouping on the why column.)  Short
+# strings are preferable so the why column can be understood without taking up
+# too much space.
+glodaSearch_results_why_contact=איש קשר
+glodaSearch_results_why_subject=נושא
+glodaSearch_results_why_body=גוף
+glodaSearch_results_why_attachment=קובץ מצורף
