--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -351,6 +351,16 @@ biffNotification_messages=har %1$S nye meldinger
 newBiffNotification_message=%1$S har %2$S nye meldinger
 newBiffNotification_messages=%1$S har %2$S nye meldinger
 
+# LOCALIZATION NOTE(macBiffNotification is Mac only):
+#  %1$S is the number of new messages
+#  %2$S is a list of names and/or email addresses separated by biffNotification_separator
+#  %3$S is the number of new messages not displayed in the biff alert
+macBiffNotification_message=%1$S nye meldinger fra %2$S.
+macBiffNotification_messages=%1$S nye meldinger fra %2$S.
+macBiffNotification_messages_extra=%1$S nye meldinger fra %2$S og %3$S andre.
+# Used to separate names/email addresses in a list.  Note the trailing space ', '
+macBiffNotification_separator=,\u0020
+
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S av %S KB brukt
 quotaPercentUsed=%S%% full
@@ -461,3 +471,15 @@ headerFieldYou=Deg
 
 # The what's new tab title, shown on version update
 whatsNew=Hva er nytt
+
+#LOCALIZATION NOTE (glodaSearch_results_why_*):  These strings populate the
+# glodaWhyColumn when performing a gloda-backed search, explaining why a
+# specific result is present in the search.  Because of how the message grouping
+# mechanism works, this value is both the value in the "Why" column as well as
+# the header for the group (when sorting/grouping on the why column.)  Short
+# strings are preferable so the why column can be understood without taking up
+# too much space.
+glodaSearch_results_why_contact=Kontakt
+glodaSearch_results_why_subject=Emne
+glodaSearch_results_why_body=Innhold
+glodaSearch_results_why_attachment=Vedlegg
