Update nb-NO l10n

--- a/nb-NO/suite/chrome/common/permissions/cookieViewer.properties
+++ b/nb-NO/suite/chrome/common/permissions/cookieViewer.properties
@@ -46,7 +46,7 @@ hostColon=Tjener:
 domainColon=Domene:
 forSecureOnly=Bare krypterte tilkoblinger
 forAnyConnection=Hvilken som helst type tilkobling
-AtEndOfSession = på slutten av programøkten
+expireAtEndOfSession=På slutten av programøkten
 deleteAllCookies=Er du sikker på at du vil slette alle infokapsler?
 deleteAllCookiesTitle=Slett alle infokapsler
 deleteAllCookiesYes=&Slett
