--- a/nb-NO/suite/chrome/mailnews/messenger.properties
+++ b/nb-NO/suite/chrome/mailnews/messenger.properties
@@ -339,6 +339,16 @@ fromSearchCriteria=Emne eller fra inneholder\:
 biffNotification_message=har %1$S nye meldinger
 biffNotification_messages=har %1$S nye meldinger
 
+# LOCALIZATION NOTE(macBiffNotification is Mac only):
+#  %1$S is the number of new messages
+#  %2$S is a list of names and/or email addresses separated by biffNotification_separator
+#  %3$S is the number of new messages not displayed in the biff alert
+macBiffNotification_message=%1$S nye meldinger fra %2$S.
+macBiffNotification_messages=%1$S nye meldinger fra %2$S.
+macBiffNotification_messages_extra=%1$S nye meldinger fra %2$S og %3$S andre.
+# Used to separate names/email addresses in a list.  Note the trailing space ', '
+macBiffNotification_separator=,\u0020
+
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S av %S KB brukt
 quotaPercentUsed=%S%% full
