--- a/nb-NO/calendar/installer/custom.properties
+++ b/nb-NO/calendar/installer/custom.properties
@@ -53,8 +53,8 @@
 CONTEXT_OPTIONS=$BrandShortName &Innstillinger
 CONTEXT_SAFE_MODE=$BrandShortName &Sikker modus
 SAFE_MODE=Sikker modus
-OPTIONS_PAGE_TITLE=Installasjonstype
-OPTIONS_PAGE_SUBTITLE=Velg installasjonsalternativer
+OPTIONS_PAGE_TITLE=Installeringstype
+OPTIONS_PAGE_SUBTITLE=Velg installeringstype
 SHORTCUTS_PAGE_TITLE=Lag snarveier
 SHORTCUTS_PAGE_SUBTITLE=Opprett programikoner
 SUMMARY_PAGE_TITLE=Oppsummering
@@ -69,19 +69,19 @@ CREATE_ICONS_DESC=Opprett programikoner for $BrandShortName på:
 ICONS_DESKTOP=&Skrivebordet
 ICONS_STARTMENU=St&artmenyen
 ICONS_QUICKLAUNCH=&Hurtigstartlinjen
-WARN_MANUALLY_CLOSE_APP_INSTALL=$BrandShortName må lukkes før du fortsetter med installeringen.\n\nLukk $BrandShortName for å fortsette.
-WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName må lukkes før du fortsetter med avinstalleringen.\n\nLukk $BrandShortName for å fortsette.
+WARN_MANUALLY_CLOSE_APP_INSTALL=Du må lukke $BrandShortName før du installerer.\n\nLukk $BrandShortName for å fortsette.
+WARN_MANUALLY_CLOSE_APP_UNINSTALL=Du må lukke $BrandShortName før du avinstallerer.\n\nLukk $BrandShortName for å fortsette.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName er allerede åpen.\n\nLukk $BrandShortName før du starter versjonen du nettopp installerte.
 WARN_WRITE_ACCESS=Du har ikke tilgang til å skrive til installasjonsmappen.\n\nTrykk OK for å velge en annen mappe.
 WARN_DISK_SPACE=Du har ikke nok ledig diskplass for å installere til denne mappen.\n\nTrykk OK for å velge en annen plassering.
 WARN_MIN_SUPPORTED_OS_MSG=Beklager, kan ikke installere $BrandShortName. Denne versjonen av $BrandShortName krever ${MinSupportedVer} eller nyere.
 WARN_RESTART_REQUIRED_UNINSTALL=Datamaskinen må startes på nytt for å fullføre en tidligere avinstallering av $BrandShortName. Vil du starte på nytt nå?
-WARN_RESTART_REQUIRED_UPGRADE=Datamaskinen må starter på nytt for å fullføre en tidligere oppgradering av $BrandShortName. Vil du starte på nytt nå?
+WARN_RESTART_REQUIRED_UPGRADE=Datamaskinen må startes på nytt for å fullføre en tidligere oppgradering av $BrandShortName. Vil du starte på nytt nå?
 ERROR_CREATE_DIRECTORY_PREFIX=Feil ved oppretting av mappe:
-ERROR_CREATE_DIRECTORY_SUFFIX=Trykk Avbryt for å stoppe installeringen, eller \nPrøv igjen for å prøve igjen.
+ERROR_CREATE_DIRECTORY_SUFFIX=Trykk på «Avbryt» for å stoppe installeringen, eller\n«Prøv igjen» for å prøve igjen.
 
 UN_CONFIRM_PAGE_TITLE=Avinstaller $BrandFullName
-UN_CONFIRM_PAGE_SUBTITLE=Sletter $BrandFullName fra datamaskinen.
+UN_CONFIRM_PAGE_SUBTITLE=Slett $BrandFullName fra datamaskinen.
 UN_CONFIRM_UNINSTALLED_FROM=Avinstallerer $BrandShortName fra følgende mappe:
 UN_CONFIRM_CLICK=Trykk på «Avinstaller» for å fortsette.
 
@@ -94,7 +94,7 @@ STATUS_CLEANUP=Utfører vedlikehold …
 
 # _DESC strings support approximately 65 characters per line.
 # One line
-OPTIONS_SUMMARY=Velg hvilken type installasjon du foretrekker og trykk «Neste».
+OPTIONS_SUMMARY=Velg hvilken type installering du foretrekker og trykk «Neste».
 # One line
 OPTION_STANDARD_DESC=Installerer $BrandShortName med de vanligste alternativene.
 OPTION_STANDARD_RADIO=&Standard
