--- a/nb-NO/suite/installer/windows/custom.properties
+++ b/nb-NO/suite/installer/windows/custom.properties
@@ -76,10 +76,10 @@ OPTIONS_PAGE_SUBTITLE=Velg installeringstype
 SHORTCUTS_PAGE_TITLE=Lag snarveier
 SHORTCUTS_PAGE_SUBTITLE=Opprett programikoner
 SUMMARY_PAGE_TITLE=Oppsummering
-SUMMARY_PAGE_SUBTITLE=Klar til å starte installeringen av $BrandShortName
+SUMMARY_PAGE_SUBTITLE=Klar til å installere $BrandShortName
 SUMMARY_INSTALLED_TO=Installerer $BrandShortName til følgende plassering:
-SUMMARY_CLICK=Trykk på Installer for å fortsette.
-SUMMARY_REBOOT_REQUIRED_INSTALL=En omstart av datamaskinen kan være nødvendig for å fullføre installasjonen.
+SUMMARY_CLICK=Trykk på «Installer» for å fortsette.
+SUMMARY_REBOOT_REQUIRED_INSTALL=En omstart av datamaskinen kan være nødvendig for å fullføre installeringen.
 SUMMARY_REBOOT_REQUIRED_UNINSTALL=En omstart av datamaskinen kan være nødvendig for å fullføre avinstalleringen.
 SURVEY_TEXT=F&ortell oss hva du syntes om $BrandShortName
 LAUNCH_TEXT=&Start $BrandFullName nå
@@ -89,18 +89,18 @@ CREATE_ICONS_DESC=Opprett programikoner for $BrandShortName på:
 ICONS_DESKTOP=&Skrivebordet
 ICONS_STARTMENU=St&artmenyen
 ICONS_QUICKLAUNCH=&Hurtigstartlinjen
-WARN_WRITE_ACCESS=Du har ikke tilgang til å skrive til installasjonsmappen.\n\nTrykk OK for å velge en annen mappe.
+WARN_WRITE_ACCESS=Du har ikke tilgang til å skrive til installeringsmappen.\n\nTrykk OK for å velge en annen mappe.
 WARN_DISK_SPACE=Du har ikke nok ledig diskplass for å installere til denne mappen.\n\nTrykk OK for å velge en annen plassering.
-WARN_MANUALLY_CLOSE_APP_INSTALL=$BrandShortName må lukkes før du fortsetter med installeringen.\n\nLukk $BrandShortName for å fortsette.
-WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName må lukkes før du fortsetter med avinstalleringen.\n\nLukk $BrandShortName for å fortsette.
+WARN_MANUALLY_CLOSE_APP_INSTALL=Du må lukke $BrandShortName før du installerer.\n\nLukk $BrandShortName for å fortsette.
+WARN_MANUALLY_CLOSE_APP_UNINSTALL=Du må lukke $BrandShortName før du avinstallerer.\n\nLukk $BrandShortName for å fortsette.
 WARN_RESTART_REQUIRED_UNINSTALL=Datamaskinen må startes på nytt for å fullføre en tidligere avinstallering av $BrandShortName. Vil du starte på nytt nå?
-WARN_RESTART_REQUIRED_UPGRADE=Datamaskinen må starter på nytt for å fullføre en tidligere oppgradering av $BrandShortName. Vil du starte på nytt nå?
+WARN_RESTART_REQUIRED_UPGRADE=Datamaskinen må startes på nytt for å fullføre en tidligere oppgradering av $BrandShortName. Vil du starte på nytt nå?
 ERROR_CREATE_DIRECTORY_PREFIX=Feil ved oppretting av mappe:
-ERROR_CREATE_DIRECTORY_SUFFIX=Trykk «Avbryt» for å stoppe installeringen, eller \nPrøv igjen for å prøve igjen.
+ERROR_CREATE_DIRECTORY_SUFFIX=Trykk på «Avbryt» for å stoppe installeringen, eller\n«Prøv igjen» for å prøve igjen.
 
 UN_CONFIRM_CLICK=Trykk på «Avinstaller» for å fortsette.
 UN_CONFIRM_PAGE_TITLE=Avinstaller $BrandFullName
-UN_CONFIRM_PAGE_SUBTITLE=Sletter $BrandFullName fra datamaskinen.
+UN_CONFIRM_PAGE_SUBTITLE=Slett $BrandFullName fra datamaskinen.
 UN_CONFIRM_UNINSTALLED_FROM=Avinstallerer $BrandShortName fra følgende mappe:
 
 STATUS_INSTALL_APP=Installerer $BrandShortName …
@@ -113,9 +113,9 @@ BANNER_CHECK_EXISTING=Checking existing installation…
 
 # _DESC strings support approximately 65 characters per line.
 # One line
-OPTIONS_SUMMARY=Velg hvilken type installasjon du foretrekker og trykk «Neste».
+OPTIONS_SUMMARY=Velg hvilken type installering du foretrekker og trykk «Neste».
 # One line
-OPTION_STANDARD_DESC=$BrandShortName installeres med de vanligste alternativene.
+OPTION_STANDARD_DESC=Installerer $BrandShortName med de vanligste alternativene.
 OPTION_STANDARD_RADIO=&Standard
 # One line
 OPTION_COMPLETE_DESC=$BrandShortName installeres med alle tilgjengelige alternativer.
