--- a/nb-NO/mail/installer/custom.properties
+++ b/nb-NO/mail/installer/custom.properties
@@ -65,7 +65,7 @@ SUMMARY_INSTALLED_TO=Installerer $BrandShortName til følgende plassering:
 SUMMARY_REBOOT_REQUIRED_INSTALL=En omstart av datamaskinen kan være nødvendig for å fullføre installasjonen.
 SUMMARY_REBOOT_REQUIRED_UNINSTALL=En omstart av datamaskinen kan være nødvendig for å fullføre avinstalleringen.
 SUMMARY_MAKE_DEFAULT=$BrandShortName vil settes som standard e-postprogram.
-SUMMARY_CLICK=Trykk på «Installer» for å fortsette.
+SUMMARY_CLICK=Trykk «Installer» for å fortsette.
 SURVEY_TEXT=F&ortell oss hva du syntes om $BrandShortName
 LAUNCH_TEXT=&Start $BrandFullName nå
 CREATE_ICONS_DESC=Opprett programikoner for $BrandShortName på:
@@ -81,12 +81,12 @@ WARN_MIN_SUPPORTED_OS_MSG=Beklager, kan ikke installere $BrandShortName. Denne v
 WARN_RESTART_REQUIRED_UNINSTALL=Datamaskinen må startes på nytt for å fullføre en tidligere avinstallering av $BrandShortName. Vil du starte på nytt nå?
 WARN_RESTART_REQUIRED_UPGRADE=Datamaskinen må startes på nytt for å fullføre en tidligere oppgradering av $BrandShortName. Vil du starte på nytt nå?
 ERROR_CREATE_DIRECTORY_PREFIX=Feil ved oppretting av mappe:
-ERROR_CREATE_DIRECTORY_SUFFIX=Trykk på «Avbryt» for å stoppe installeringen, eller\n«Prøv igjen» for å prøve igjen.
+ERROR_CREATE_DIRECTORY_SUFFIX=Trykk «Avbryt» for å stoppe installeringen, eller\n«Prøv igjen» for å prøve igjen.
 
 UN_CONFIRM_PAGE_TITLE=Avinstaller $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=Slett $BrandFullName fra datamaskinen.
 UN_CONFIRM_UNINSTALLED_FROM=Avinstallerer $BrandShortName fra følgende mappe:
-UN_CONFIRM_CLICK=Trykk på «Avinstaller» for å fortsette.
+UN_CONFIRM_CLICK=Trykk «Avinstaller» for å fortsette.
 
 BANNER_CHECK_EXISTING=Kontrollerer installasjonen …
 
