--- a/nb-NO/suite/chrome/common/permissions/permissionsManager.properties
+++ b/nb-NO/suite/chrome/common/permissions/permissionsManager.properties
@@ -1,10 +1,10 @@
-installpermissionstext=Du kan oppgi hvilke nettsted som har tillatelse til å installere utvidelser og oppdateringer. Skriv inn den eksakte adressen til nettstedet du vil tillate, og trykk på Tillat.
+installpermissionstext=Du kan oppgi hvilke nettsted som har tillatelse til å installere utvidelser og oppdateringer. Skriv inn den eksakte adressen til nettstedet du vil tillate, og trykk «Tillat».
 installpermissionstitle=Tillatte nettsted - Programinstallering
 installpermissionshelp=advanced_pref_installation
-popuppermissionstext=Du kan oppgi hvilke nettsted som har tillatelse til å åpne sprettoppvinduer. Skriv inn den eksakte adressen til nettstedet du ønsker å tillate, og trykk Tillat.
+popuppermissionstext=Du kan oppgi hvilke nettsted som har tillatelse til å åpne sprettoppvinduer. Skriv inn den eksakte adressen til nettstedet du ønsker å tillate, og trykk «Tillat».
 popuppermissionstitle=Tillatte nettsted - Sprettoppvinduer
 popuppermissionshelp=pop_up_blocking
-imagepermissionstext=Du kan oppgi hvilke nettsted som har tillatelse til å laste inn bilder. Skriv inn den eksakte adressen til nettstedet du ønsker å behandle, og trykk Tillat eller Blokker.
+imagepermissionstext=Du kan oppgi hvilke nettsted som har tillatelse til å laste inn bilder. Skriv inn den eksakte adressen til nettstedet du ønsker å behandle, og trykk «Tillat» eller «Blokker».
 imagepermissionstitle=Unntak - Bilder
 imagepermissionshelp=images-help-managing
 
