--- a/nb-NO/suite/installer/windows/custom.properties
+++ b/nb-NO/suite/installer/windows/custom.properties
@@ -78,7 +78,7 @@ SHORTCUTS_PAGE_SUBTITLE=Opprett programikoner
 SUMMARY_PAGE_TITLE=Oppsummering
 SUMMARY_PAGE_SUBTITLE=Klar til å installere $BrandShortName
 SUMMARY_INSTALLED_TO=Installerer $BrandShortName til følgende plassering:
-SUMMARY_CLICK=Trykk på «Installer» for å fortsette.
+SUMMARY_CLICK=Trykk «Installer» for å fortsette.
 SUMMARY_REBOOT_REQUIRED_INSTALL=En omstart av datamaskinen kan være nødvendig for å fullføre installeringen.
 SUMMARY_REBOOT_REQUIRED_UNINSTALL=En omstart av datamaskinen kan være nødvendig for å fullføre avinstalleringen.
 SURVEY_TEXT=F&ortell oss hva du syntes om $BrandShortName
@@ -96,9 +96,9 @@ WARN_MANUALLY_CLOSE_APP_UNINSTALL=Du må lukke $BrandShortName før du avinstall
 WARN_RESTART_REQUIRED_UNINSTALL=Datamaskinen må startes på nytt for å fullføre en tidligere avinstallering av $BrandShortName. Vil du starte på nytt nå?
 WARN_RESTART_REQUIRED_UPGRADE=Datamaskinen må startes på nytt for å fullføre en tidligere oppgradering av $BrandShortName. Vil du starte på nytt nå?
 ERROR_CREATE_DIRECTORY_PREFIX=Feil ved oppretting av mappe:
-ERROR_CREATE_DIRECTORY_SUFFIX=Trykk på «Avbryt» for å stoppe installeringen, eller\n«Prøv igjen» for å prøve igjen.
+ERROR_CREATE_DIRECTORY_SUFFIX=Trykk «Avbryt» for å stoppe installeringen, eller\n«Prøv igjen» for å prøve igjen.
 
-UN_CONFIRM_CLICK=Trykk på «Avinstaller» for å fortsette.
+UN_CONFIRM_CLICK=Trykk «Avinstaller» for å fortsette.
 UN_CONFIRM_PAGE_TITLE=Avinstaller $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE=Slett $BrandFullName fra datamaskinen.
 UN_CONFIRM_UNINSTALLED_FROM=Avinstallerer $BrandShortName fra følgende mappe:
