--- a/nb-NO/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/nb-NO/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -94,7 +94,7 @@ finishedUpdateCheck=Ferdig med å søke etter oppdateringer for %S
 updateAvailableMsg=Versjon %S er tilgjengelig.
 
 xpinstallDisabledMsgLocked=Programvareinstallasjon er avslått av systemansvarlig.
-xpinstallDisabledMsg=Programvareinstallasjon er avslått. Trykk på Tillat og prøv igjen.
+xpinstallDisabledMsg=Programvareinstallasjon er avslått. Trykk på «Tillat» og prøv igjen.
 # LOCALIZATION NOTE: Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 newAddonsNotificationMsg2=%S ny utvidelse er installert.;%S nye utvidelser er installert.
@@ -102,7 +102,7 @@ safeModeMsg=Alle utvidelser er avslått av sikker modus.
 disabledCompatMsg=Kontroll av kompatibilitet for utvidelser er avslått. Det er mulig du har inkompatible utvidelser.
 disabledUpdateSecurityMsg=Sikkerhetskontroll for utvidelsesinstallasjon er avslått. Sikkerheten kan bli dårligere av oppdateringer.
 noUpdatesMsg=Ingen oppdateringer ble funnet.
-offlineUpdateMsg2=%S er i frakoblet modus og kan derfor ikke oppdatere utvidelser. Trykk på «Koble til» og prøv igjen.
+offlineUpdateMsg2=%S er i frakoblet modus og kan derfor ikke oppdatere utvidelser. Trykk «Koble til» og prøv igjen.
 offlineSearchMsg=%S er i frakoblet modus og kan ikke søke etter utvidelser. Trykk 'Koble til' og prøv igjen.
 enableButtonLabel=Tillat
 enableButtonAccesskey=T
