Update nb-NO l10n

--- a/nb-NO/browser/chrome/browser/browser.properties
+++ b/nb-NO/browser/chrome/browser/browser.properties
@@ -28,7 +28,7 @@ xpinstallPromptAllowButton=Tillat
 # See http://www.mozilla.org/access/keyboard/accesskey for details
 xpinstallPromptAllowButton.accesskey=T
 xpinstallDisabledMessageLocked=Programvareinstallasjon er avslått av systemansvarlig.
-xpinstallDisabledMessage=Programvareinstallasjon er avslått akkurat nå. Trykk på Tillat for å slå det på, og prøv igjen.
+xpinstallDisabledMessage=Programvareinstallasjon er avslått akkurat nå. Trykk på «Tillat» for å slå det på, og prøv igjen.
 xpinstallDisabledButton=Tillat
 xpinstallDisabledButton.accesskey=T
 popupWarning=%S forhindret nettstedet fra å åpne et sprettoppvindu.
