--- a/nb-NO/editor/ui/chrome/composer/editor.properties
+++ b/nb-NO/editor/ui/chrome/composer/editor.properties
@@ -78,7 +78,7 @@ CancelPublishTitle=Avbryt publisering?
 CancelPublishMessage=Avbrudd mens publisering foregår kan resultere i ukomplett overførte filer. Vil du fortsette publisering eller avbryte?
 CancelPublishContinue=Fortsett
 MissingImageError=Skriv inn eller velg et bilde av typen gif, jpg eller png.
-EmptyHREFError=Velg et område for å opprette en ny lenke.
+EmptyHREFError=Velg et område for å lage en ny lenke.
 LinkText=Lenketekst
 LinkImage=Lenkebilde
 MixedSelection=[Blandet merking]
