--- a/nb-NO/extensions/irc/chrome/chatzilla.properties
+++ b/nb-NO/extensions/irc/chrome/chatzilla.properties
@@ -299,6 +299,9 @@ cmd.enable-plugin.help   = Er ment for å brukes for å slå på programtillegg 
 cmd.eval.params = <expression>
 cmd.eval.help   = Evaluerer <uttrykk> som JavaScript-kode. Ikke for reddharer.
 
+cmd.evalsilent.params = <expression>
+cmd.evalsilent.help   = Identisk til /eval-kommandoen, med unntak av at [EVAL-IN] og [EVAL-OUT]-linjene ikke vises.
+
 cmd.except.params = [<nickname>]
 cmd.except.help   = Fjerner en bruker fra listen over kanal-bannlysninger. En brukers kallenavn kan oppgis, eller en vertsmaske. Uten kallenavn eller vertsmaske vil alle nåværende unntak vises.
 
@@ -1598,7 +1601,7 @@ pref.userlistLeft.help          = Viser brukerlisten på venstre side. Slå av i
 pref.username.label             = Brukernavn
 pref.username.help              = Brukernavnet ditt brukes for å opprette "vertsmaske", som er en tekstrepresentasjon av deg, ved å slå sammen vertsnavnet og brukernavnet ditt. Det er av og til brukt for å automatisk sette folk til operatorer, utestengelser og andre ting spesifikk til en person.
 pref.usermode.label             = Brukermodus
-pref.usermode.help              = Brukermodusen din angir hvordan IRC-tjeneren behandler deg (det er en liste av tegn som starter med "+") - for eksempel kan du få tjeneren til å sende deg informasjon om ting som skjer "i det skjulte" ved å sette en ulik brukermodus. Det mest vanlige valget, "i", gjør at du ikke vises som en medlem av kanalen med mindre du foretar en forespørsel som medlem av den (står for "invisible".)
+pref.usermode.help              = Brukermodusen din angir hvordan IRC-tjeneren behandler deg (det er en liste av tegn som starter med "+") - for eksempel kan du få tjeneren til å sende deg informasjon om ting som skjer "i det skjulte" ved å sette en ulik brukermodus. Det mest vanlige valget, "i", gjør at du ikke vises som en medlem av kanalen med mindre du gjør en forespørsel som medlem av den (står for "invisible".)
 pref.warnOnClose.label          = Advar meg ved avslutning mens jeg fortsatt er tilkoblet
 pref.warnOnClose.help           = Ved avslutning mens jeg fortsatt er tilkoblet nettverk vil du bli suport om du er sikker på at du vil avslutte. Slå av denne innstillingen for å ikke bli spurt.
 
