--- a/nb-NO/mail/chrome/messenger/addressbook/ldapAutoCompErrs.properties
+++ b/nb-NO/mail/chrome/messenger/addressbook/ldapAutoCompErrs.properties
@@ -119,7 +119,7 @@ errorAlertFormat=Feilkode %1$S: %2$S\n\n %3$S
 
 ## @name FILTER_ERROR_HINT
 ## @loc none
-10087=Kontroller at søkefilteret er korrekt, og prøv på nytt, eller kontakt systemansvarlige. For å kontrollere at søkefilteret er korrekt, velg Innstillinger fra Rediger-menyen, velg «E-post og nyhetsgrupper» og deretter Adressering. Trykk «Rediger kataloger» og velg LDAP-tjeneren som blir brukt. Trykk Rediger og deretter Avansert for å se søkefilteret.
+10087=Kontroller at søkefilteret er korrekt, og prøv på nytt, eller kontakt systemansvarlige. For å kontrollere at søkefilteret er korrekt, velg Innstillinger fra Rediger-menyen, velg «E-post og nyhetsgrupper» og deretter Adressering. Trykk «Rediger kataloger» og velg LDAP-tjeneren som blir brukt. Trykk «Rediger» og deretter «Avansert» for å se søkefilteret.
 
 ## @name NO_MEMORY_HINT
 ## @loc none
@@ -127,7 +127,7 @@ errorAlertFormat=Feilkode %1$S: %2$S\n\n %3$S
 
 ## @name CONNECT_ERROR_HINT
 ## @loc none
-10091=Kontroller at vertsnavnet og portnummeret er korrekt og prøv igjen, eller kontakt systemansvarlig. For å kontrollere at vertsnavnet og portnummeret er korrekt, velg fra menyen Rediger > Innstillinger, velg E-post og Nyhetsgrupper > Adressering Addressing. Trykk på knappen Rediger kataloger, og velg LDAP-tjeneren som brukes. Trykk på Rediger for å vise vertsnavnet. Trykk på Avansert for å se portnummeret.
+10091=Kontroller at vertsnavnet og portnummeret er korrekt og prøv igjen, eller kontakt systemansvarlig. For å kontrollere at vertsnavnet og portnummeret er korrekt, velg fra menyen Rediger > Innstillinger, velg E-post og Nyhetsgrupper > Adressering Addressing. Trykk «Rediger kataloger», og velg LDAP-tjeneren som brukes. Trykk «Rediger» for å vise vertsnavnet. Trykk «Avansert» for å se portnummeret.
 
 ## @name HOST_NOT_FOUND_HINT
 ## @loc none
