--- a/nb-NO/suite/chrome/mailnews/addressbook/ldapAutoCompErrs.properties
+++ b/nb-NO/suite/chrome/mailnews/addressbook/ldapAutoCompErrs.properties
@@ -127,7 +127,7 @@ errorAlertFormat=Feilkode %1$S: %2$S\n\n %3$S
 
 ## @name CONNECT_ERROR_HINT
 ## @loc none
-10091=Kontroller at vertsnavnet og portnummeret er korrekt og prøv igjen, eller kontakt systemansvarlig. For å kontrollere at vertsnavnet og portnummeret er korrekt, velg fra menyen Rediger > Innstillinger, velg E-post og Nyhetsgrupper > Adressering Addressing. Trykk «Rediger kataloger», og velg LDAP-tjeneren som brukes. Trykk på «Rediger» for å vise vertsnavnet. Trykk «Avansert» for å se portnummeret.
+10091=Kontroller at vertsnavnet og portnummeret er korrekt og prøv igjen, eller kontakt systemansvarlig. For å kontrollere at vertsnavnet og portnummeret er korrekt, velg fra menyen Rediger > Innstillinger, velg E-post og Nyhetsgrupper > Adressering Addressing. Trykk «Rediger kataloger», og velg LDAP-tjeneren som brukes. Trykk «Rediger» for å vise vertsnavnet. Trykk «Avansert» for å se portnummeret.
 
 ## @name HOST_NOT_FOUND_HINT
 ## @loc none
