--- a/nb-NO/dom/chrome/security/caps.properties
+++ b/nb-NO/dom/chrome/security/caps.properties
@@ -49,8 +49,8 @@ CallMethodDeniedOrigins = Tilgang ble nektet for <%S> til å kalle metoden %S.%S
 GetPropertyDeniedOriginsOnlySubject = Tilgang ble nektet for <%S> til å lese egenskapen %S.%S
 SetPropertyDeniedOriginsOnlySubject = Tilgang ble nektet for <%S> til å sette egenskapen %S.%S
 CallMethodDeniedOriginsOnlySubject = Tilgang ble nektet for <%S> til metoden %S.%S
-CreateWrapperDenied = Tilgang ble nektet for å opprette omslag for objektklassen %S
-CreateWrapperDeniedForOrigin = Tilgang ble nektet for <%2$S> å opprette omslag for objektklassen %1$S
+CreateWrapperDenied = Tilgang til å lage omslag for objektklassen %S ble nektet
+CreateWrapperDeniedForOrigin = Tilgang for <%2$S> å opprette omslag for objektklassen %1$S ble nektet
 ExtensionCapability = Ukjent: %S
 ProtocolFlagError = Advarsel: Protokollhåndterer for «%S» har ingen sikkerhetsplan.  Selv om innlasting av slike protokoller tillates nå er dette frarådet.  Se dokumentasjonen i nsIProtocolHandler.idl.
 #
