--- a/nb-NO/dom/chrome/xslt/xslt.properties
+++ b/nb-NO/dom/chrome/xslt/xslt.properties
@@ -64,7 +64,7 @@
 27 = Lasting av et XSLT stilark ble blokkert av sikkerhetsårsaker.
 28 = Evaluerer et ugyldig uttrykk
 29 = Ubalansert krøllparentes.
-30 = Oppretter element med et ugyldig QName.
+30 = Lager element med et ugyldig QName.
 31 = Variabelbinding skjuler en variabelbinding brukt i samme template.
 
 LoadingError = Feil ved lasting av stilark: %S
