Update nb-NO l10n

--- a/nb-NO/editor/ui/chrome/composer/editor.properties
+++ b/nb-NO/editor/ui/chrome/composer/editor.properties
@@ -30,7 +30,7 @@ CheckSpellingDone=Fullført stavekontroll.
 CheckSpelling=Stavekontroll
 InputError=Feil
 Alert=Varsel
-CantEditFramesetMsg=Nettsideutvikleren kan ikke redigere rammesett, eller sider med innsiderammer. Prøv å redigere siden for hver ramme separat når det gjelder rammesett. Lagre en kopi av siden og fjern <iframe>-merkelappen når det gjelder innsiderammer.
+CantEditFramesetMsg=Nettsideutvikleren kan ikke redigere rammesett, eller sider med innbundne rammer. Prøv å redigere rammene i rammesettet hver for seg. Lagre en kopi av siden og fjern <iframe>-merkelappen når det gjelder innsiderammer.
 CantEditMimeTypeMsg=Denne typen sider kan ikke redigeres.
 CantEditDocumentMsg=Denne siden kan ikke redigeres av en ukjent grunn.
 BeforeClosing=før lukking
