Update nb-NO l10n (thanks to Bjorn Svindseth for nb-NO bug triage). Translation by me.

--- a/nb-NO/extensions/irc/chrome/chatzilla.properties
+++ b/nb-NO/extensions/irc/chrome/chatzilla.properties
@@ -273,7 +273,7 @@ cmd.deop.params = <nickname> [<...>]
 cmd.deop.help   = Fjerner operator-status fra <nickname> på denne kanalen. Krever Operator-tilgang.
 
 cmd.desc.params = <description>
-cmd.desc.help   = Endrer 'ircnavn'-linja som sendes når noen utfører en /whois på deg. Du må angi denne *før* du kobler til et nettverk.
+cmd.desc.help   = Endrer 'ircnavn'-linjen som sendes når noen utfører en /whois på deg. Du må angi denne *før* du kobler til et nettverk.
 
 cmd.devoice.label  = Fjern Voice-status
 cmd.devoice.params = <nickname> [<...>]
@@ -1549,7 +1549,7 @@ pref.munger.word-hyphenator.help  = Gjør at ChatZilla automatisk setter inn "or
 pref.newTabLimit.label          = Maksimum antall automatisk opprettede visninger
 pref.newTabLimit.help           = Setter antall visninger (for eksempel forespørselvisninger) som kan bli opprettet automatisk av ChatZilla. Når grensen nås, vil private meldinger bli vist i den aktive visningen isteden. Sett denne til 0 for ubegrenset antall visninger, eller 1 for å ikke tillate automatisk opprettede visninger.
 pref.nickCompleteStr.label      = Automatisk fullføring av kallenavnstrenger
-pref.nickCompleteStr.help       = Denne teksten er lagt til et kallenavn når du trykker TAB for å fullføre kallenavnet ved starten av linja.
+pref.nickCompleteStr.help       = Denne teksten er lagt til et kallenavn når du trykker TAB for å fullføre kallenavnet ved starten av linjen.
 pref.nickname.label             = Kallenavn
 pref.nickname.help              = Dette er navnet som alle andre ser deg som når du er på IRC. Du kan bruke hva du vil, men det kan ikke inneholde spesielt "rare" tegn, så hold deg til alfanumeriske tegn.
 pref.nicknameList.label         = Kallenavn-liste
@@ -1593,7 +1593,7 @@ pref.sound.user.stalk.help      =
 pref.stalkWholeWords.label      = Følg bare hele ord
 pref.stalkWholeWords.help       = Dette angir ChatZillas behandling av ord du følger etter; om treff må være hele ord, eller kan forekomme som en del av andre ord. For eksempel "ChatZilla er tøft" vil bli et treff om du følger ordet "zilla", bare hvis dette valget er satt til 'off'.
 pref.stalkWords.label           = Følg etter ord
-pref.stalkWords.help            = En liste med ord som, når en linje inneholder ett av dem, vil ChatZilla merke linja som "viktig", og vil forsøke å få tak i oppmerksomheten din dersom "Agressivt varsel" er påslått.
+pref.stalkWords.help            = En liste med ord som, når en linje inneholder ett av dem, vil ChatZilla merke linjen som "viktig", og vil forsøke å få tak i oppmerksomheten din dersom "Agressivt varsel" er påslått.
 pref.urls.store.max.label       = Maks antall lagrede URL-er
 pref.urls.store.max.help        = Setter maks antall URL-er som skal samles og lagres i ChatZilla. Kommandoen "/urls" viser de siste 10 lagrede, eller flere dersom du skriver "/urls 20", for eksempel.
 pref.userlistLeft.label         = Viser brukerlisten på venstre sidet
