--- a/nb-NO/suite/chrome/mailnews/localMsgs.properties
+++ b/nb-NO/suite/chrome/mailnews/localMsgs.properties
@@ -209,7 +209,7 @@
 
 ## @name MOVEMAIL_CANT_TRUNCATE_SPOOL_FILE
 ## @loc None
-4036=Klarte ikke tømme Spool-filen %S.
+4036=Klarte ikke tømme spool-filen %S.
 
 ## @name MOVEMAIL_SPOOL_FILE_NOT_FOUND
 ## @loc None
