--- a/nb-NO/suite/chrome/mozldap/ldap.properties
+++ b/nb-NO/suite/chrome/mozldap/ldap.properties
@@ -42,7 +42,7 @@
 
 ## @name AUTH_PROMPT_TITLE
 ## @loc none
-authPromptTitle=Passord Påkrevd for LDAP-tjener
+authPromptTitle=Passord påkrevd for LDAP-tjener
 
 ## @name AUTH_PROMPT_TEXT
 ## @loc %1$S should not be localized.  It is the hostname of the LDAP server.
