--- a/ca/browser/chrome/browser/browser.properties
+++ b/ca/browser/chrome/browser/browser.properties
@@ -5,6 +5,7 @@ openFile=Obre fitxer
 
 droponbookmarksbutton=Deixeu anar un enllaç per a afegir-lo a les adreces d'interès
 dropondownloadsbutton=Deixeu anar un enllaç o un fitxer per a baixar-lo
+droponnewtabbutton=Deixeu anar un enllaç o un fitxer per a obrir-lo en una nova pestanya
 droponnewwindowbutton=Deixeu anar un enllaç o un fitxer per a obrir-lo en un nou fitxer
 droponhomebutton=Deixeu anar un enllaç o un fitxer per a fer d'aquest la vostra pàgina d'inici
 droponhometitle=Defineix com a pàgina d'inici
@@ -71,9 +72,7 @@ updatesItem_pending=Aplica ara l'actualització baixada…
 updatesItem_pendingFallback=Aplica ara l'actualització baixada…
 
 # RSS Pretty Print
-feedNoFeeds=La pàgina no té canals
-feedShowFeedNew=Subscriu a «%S»…
-feedHasFeedsNew=Subscriu a la pàgina…
+feedShowFeedNew=Subscriu-me a «%S»…
 
 # History menu
 menuOpenAllInTabs.label=Obre-ho tot en pestanyes
