--- a/ca/browser/chrome/browser/preferences/preferences.properties
+++ b/ca/browser/chrome/browser/preferences/preferences.properties
@@ -81,7 +81,7 @@ hostColon=Ordinador central:
 domainColon=Domini:
 forSecureOnly=Només connexions xifrades
 forAnyConnection=Qualsevol tipus de connexió
-AtEndOfSession = quan s'acabi la sessió
+expireAtEndOfSession = Al final de la sessió
 can=Permet
 canSession=Permet per aquesta sessió
 cannot=Bloca
