--- a/nb-NO/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/nb-NO/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -265,7 +265,7 @@
 
 ## Strings use for the save message dialog shown when the user close a message compose window
 saveDlogTitle=Lagrer melding
-saveDlogMessage=Meldingen har ikke blitt sendt. Vil du lagre meldingen i utkast-mappen?
+saveDlogMessage=Meldingen er ikke sendt. Vil du lagre meldingen som et utkast?
 
 ## generics string
 defaultSubject=(uten emne)
