--- a/nl/suite/chrome/common/permissions/cookieViewer.properties
+++ b/nl/suite/chrome/common/permissions/cookieViewer.properties
@@ -46,7 +46,7 @@ hostColon = Host:
 domainColon = Domein:
 forSecureOnly = Alleen beveiligde verbindingen
 forAnyConnection = Alle soorten verbindingen
-AtEndOfSession = aan het einde van deze sessie
+expireAtEndOfSession = Aan het einde van deze sessie
 deleteAllCookies = Weet u zeker dat u alle cookies wilt verwijderen?
 deleteAllCookiesTitle = Alle cookies verwijderen
 deleteAllCookiesYes=&Verwijderen
